  * Remote mode (PORT set to TI:) is now working. In Remote mode status
    transfer display is suppressed to avoid conflicting with the Local
    (PC-side) Kermit, and a message is displayed after GET, RECEIVE, SEND
    and SERVER commands reminding the user to exit back to the Local Kermit.
  * Bug fix: entering a '?' in commands that require an arbitrary text
    argument (OUTPUT, RECEIVE, etc.) caused corruption of the command line.
  * Bug fix: character count was not correctly kept after command autocomplete
    operations, which resulted in prompt erasing when deleting command line
    chars, and in potential buffer corruption.
  * Typing ^Z at the command prompt now exits Kermit-180.
  * Display an error message if the SET PORT command failed to attach the
    comm port.
  * The SET PORT command now also reminds about Local/Remote mode changes.


05/12/21

- DEVTT: allow non-privileged users to change terminal characteristics of
  any terminal set to Public.

- The kernel now clears the Public bit of the terminal unit when a user
  logs in.

- Kermit-180 is no longer built as privileged task.

- ZSM4: set exit code to 'error' if errors were found during assembly, or
  to 'severe' in case of I/O errors. When assembling multiple files via a
  command file, the exit code will be set if errors occurred in at least
  one of the files; ZSM4 will continue processing the rest of the files in
  the list.


06/12/21

- SYSFCP bug fix: the BMSNGL routine did not always return the correct error
  code when the disk was full.

- ZSM4: output file write error message only once per file.


19/12/21

- LDR: load tasks at the address specified in the task header and not at
  fixed 0100h. Do not initialize RST vector area if task start is below
  0040h.

- INS: use task entry point address from file header, do not force it to
  0100h.

- TKB: a jump vector to the start address at load address is redundant
  for .TSK files (the start address is stored in the task header.)
